--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -703,6 +703,20 @@ textarea.form-control {
   border-radius: 1.5rem;
 }
 
+.card-custom3 {
+  position: relative;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  word-wrap: break-word;
+  background-color: #fff;
+  background-clip: border-box;
+  border: 1px solid rgba(0, 0, 0, 0.125);
+  box-shadow: #818182;
+  border-radius: 1.5rem;
+}
+
 .page-link {
   position: relative;
   display: block;
