modifing style on stripe button

--- a/app/views/charges/_new.html.erb
+++ b/app/views/charges/_new.html.erb
@@ -6,7 +6,7 @@
       </div>
     <% end %>
     <label class="amount">
-      <span>Total: <%= model.price %> €</span>
+      <span class="text-danger">Total: <%= model.price %> €</span>
     </label>
   </article>
 
