--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -301,6 +301,42 @@ a:hover {
 
 /*BUTTONS*/
 
+button.stripe-button-el,
+button.stripe-button-el>span {
+  color: #FFF !important;
+  background-color: #FF6666 !important;
+  border-color: #FF6666 !important;
+  border-radius: 1.8rem;
+  background-image: none;
+  text-shadow: none;
+  box-shadow: none;
+  border-width: 1px;
+  border-style: solid;
+}
+
+button.stripe-button-el:hover,
+button.stripe-button-el:hover>span {
+  color: #ff6666 !important;
+  background-color: #FFf !important;
+  border-color: #FF6666 !important;
+  border-radius: 1.8rem;
+  background-image: none;
+  text-shadow: none;
+  box-shadow: none;
+  border-style: solid;
+}
+
+
+button.stripe-button-el:focus,
+button.stripe-button-el:focus>span {
+  color: #fff !important;
+  background-color: #FF6666 !important;
+  border-color: #FF6666 !important;
+  border-radius: 1.8rem;
+  box-shadow: 0 0 0 0.2rem rgba(54, 206, 168, 0.25) !important;
+  background-image: none;
+}
+
 .btn {
   border-radius: 1.8rem;
 }
