adding title color

--- a/app/views/users/mentor_show.html.erb
+++ b/app/views/users/mentor_show.html.erb
@@ -2,13 +2,13 @@
   <div class="row">
     <!-- LEFT COLUMN -->
     <div class="col m-4">
-      <h2>Mon espace mentor</h2>
+      <h3 class="mb-4">Mon espace mentor</h3>
 
       <!-- PROFIL -->
       <%= render partial: 'users/show-partial-profile' %>
 
       <!-- TALENTS -->
-      <h4 class="card-title mt-4">Je propose ces activités :</h4>
+      <h4 class="card-title m-4 text-primary">Je propose ces activités :</h4>
       <hr>
       <% if @current_user.talents && @current_user.talents.count > 0  %>
         <% @current_user.talents.each do |talent| %>
@@ -24,7 +24,7 @@
     <div class="col m-4">
 
       <!-- APPOINTMENTS THAT NEED TO BE VALIDATE -->
-      <h4 class="card-title mt-4">Séances à valider :</h4>
+      <h4 class="card-title mt-4 text-primary">Séances à valider :</h4>
       <hr>
       <% if @not_validate_appointments && @not_validate_appointments.count > 0 %>
         <% @not_validate_appointments.each do |not_validate_appointment| %>
@@ -35,7 +35,7 @@
       <% end %>
 
       <!-- APPOINTMENTS THAT NEED TO BE PAID -->
-      <h4 class="card-title mt-4">Séances en attente de paiement :</h4>
+      <h4 class="card-title mt-4 text-primary">Séances en attente de paiement :</h4>
       <hr>
       <% if @not_paid_appointments && @not_paid_appointments.count > 0 %>
         <% @not_paid_appointments.each do |not_paid_appointment| %>
@@ -46,7 +46,7 @@
       <% end %>
 
       <!-- FUTURE VALIDATE & PAID APPOINTMENTS -->
-      <h4 class="card-title mt-4">Séances à venir :</h4>
+      <h4 class="card-title mt-4 text-primary">Séances à venir :</h4>
       <hr>
       <% if @future_paid_appointments && @future_paid_appointments.count > 0 %>
         <% @future_paid_appointments.each do |future_paid_appointment| %>
@@ -57,7 +57,7 @@
       <% end %>
 
       <!-- PAST VALIDATE & PAID APPOINTMENTS -->
-      <h4 class="card-title mt-4">Séances passées :</h4>
+      <h4 class="card-title mt-4 text-primary">Séances passées :</h4>
       <hr>
       <% if @past_paid_appointments && @past_paid_appointments.count > 0 %>
         <% @past_paid_appointments.each do |past_paid_appointment| %>
