--- a/app/views/layouts/_jumbo-landing.html.erb
+++ b/app/views/layouts/_jumbo-landing.html.erb
@@ -8,5 +8,5 @@
     </div>
 </div>
 <div class="d-flex justify-content-center">
-   <%= render partial: 'layouts/searchform' %>
+   <%= render partial: 'layouts/searchform-sentence' %>
 </div>
