--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -72,6 +72,11 @@
           <a class="nav-link" href="<%=home_path%>">Accueil</a>
         </li>
 
+        <!-- TALENTS INDEX -->
+        <li class="nav-item active">
+          <a class="nav-link" href="<%= talents_path %>">Explorer</a>
+        </li>
+
         <!-- ABOUT -->
         <li class="nav-item">
           <a class="nav-link" href="<%=about_path%>">À propos</a>
