--- a/app/views/talents/index.html.erb
+++ b/app/views/talents/index.html.erb
@@ -1,2 +1,15 @@
-<h1>Talents#index</h1>
-<p>Find me in app/views/talents/index.html.erb</p>
+<div class="container mt-5">
+  <%= render partial: 'layouts/searchform', locals: {keyword: params[:search_keywords]} %>
+  <br>
+  <div class="row">
+    <div class="col">
+        <div class="text-center m-4">
+          <div class="row item-center">
+            <% @talents.all.each do |talent|%>
+              <%= render partial: 'layouts/talent-index-card', locals: {model: talent} %>
+            <% end %>
+          </div>
+        </div>
+    </div>
+  </div>
+</div>
