fix rounded jumbo and adding button to create a talent

--- a/app/views/layouts/_box-landing-card.html.erb
+++ b/app/views/layouts/_box-landing-card.html.erb
@@ -7,3 +7,7 @@
     <% end %>
   </div>
 </div>
+<div class="text-center m-4">
+<h5 class="">Toi aussi, deviens mentor!</h5>
+<%= button_to 'Proposer une activité', new_talent_path(), method: :get, class: "btn btn-outline-danger btn-sm" %>
+</div>
