--- a/app/views/layouts/_jumbo-landing.html.erb
+++ b/app/views/layouts/_jumbo-landing.html.erb
@@ -1,4 +1,4 @@
-<div class="jumbotron">
+<div class="jumbotron jumbotron-fluid">
     <video autoplay="" muted="" loop="">
     <source src="https://storage.coverr.co/videos/1di9RQ7cmcFzQqixD02TjDrson5YlqEAB?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhcHBJZCI6Ijg3NjdFMzIzRjlGQzEzN0E4QTAyIiwiaWF0IjoxNjA3NDY0Mjc2fQ.fHpBsI6j4uLNaLvvKqggU9frbZ8e5-CZLoQSTmldZKM" type="video/mp4">
     Your browser does not support the video tag.
