--- a/app/views/users/apprentice_show.html.erb
+++ b/app/views/users/apprentice_show.html.erb
@@ -2,13 +2,13 @@
   <div class="row">
     <!-- LEFT COLUMN -->
     <div class="col m-4">
-      <h2>Mon espace apprenti</h2>
+      <h3 class="mb-4">Mon espace apprenti</h3>
 
       <!-- PROFIL -->
       <%= render partial: 'users/show-partial-profile' %>
 
       <!-- FUTURE VALIDATE & PAID APPOINTMENTS -->
-      <h4 class="card-title mt-4">Séances confirmées :</h4>
+      <h4 class="card-title mt-4 text-primary">Séances confirmées :</h4>
       <hr>
       <% if @future_paid_appointments && @future_paid_appointments.count > 0 %>
         <% @future_paid_appointments.each do |future_paid_appointment| %>
@@ -19,7 +19,7 @@
       <% end %>
 
       <!-- PAST VALIDATE & PAID APPOINTMENTS -->
-      <h4 class="card-title mt-4">Séances passées :</h4>
+      <h4 class="card-title mt-4 text-primary">Séances passées :</h4>
       <hr>
       <% if @past_paid_appointments && @past_paid_appointments.count > 0 %>
         <% @past_paid_appointments.each do |past_paid_appointments| %>
@@ -31,10 +31,10 @@
     </div>
 
     <!-- RIGHT COLUMN -->
-    <div class="col">
+    <div class="col m-4">
 
       <!-- APPOINTMENTS THAT NEED TO BE VALIDATE -->
-      <h4 class="card-title mt-4">Séances en attente de validation du mentor :</h4>
+      <h4 class="card-title mt-4 text-primary">Séances en attente de validation du mentor :</h4>
       <hr>
       <% if @not_validate_appointments && @not_validate_appointments.count > 0 %>
         <% @not_validate_appointments.each do |not_validate_appointment| %>
@@ -46,7 +46,7 @@
 
       <!--To implement when Stripe ok and validation by mentor ok-->
       <!-- APPOINTMENTS THAT NEED TO BE PAID -->
-      <h4 class="card-title mt-4">Séances en attente de paiement :</h4>
+      <h4 class="card-title mt-4 text-primary">Séances en attente de paiement :</h4>
       <hr>
       <% if @not_paid_appointments && @not_paid_appointments.count > 0 %>
         <% @not_paid_appointments.each do |not_paid_appointment| %>
