--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -98,11 +98,7 @@
       <% if user_signed_in? %>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle btn btn-outline-light " href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              <%if current_user.avatar.attached?%>
-                <%= image_tag current_user.avatar, alt: 'avatar', class: "avatar-img rounded-circle max-width-1" %>
-              <%else%>
-                <%= image_tag("user_default.jpg", class: "avatar-img rounded-circle") %>
-              <%end%>
+              <%= image_tag("user_default.jpg", class: "avatar-img rounded-circle max-width-1") %>
               Mon espace
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
