--- a/app/views/appointments/_new_appointment_form.html.erb
+++ b/app/views/appointments/_new_appointment_form.html.erb
@@ -4,13 +4,12 @@
         <h4 class="m-4">Faire une demande de rendez-vous:</h4>
         <div class="field">
           <%= form.label :start_time%><br>
-          <%= form.date_field :start_time, class: 'form-control max-width-18 m-auto' %><br>
-          <%= select_time %><br><br>
+          <%= form.datetime_select :start_time, { ampm: true, order: [:day, :month, :year] }, { class: "custom-select mb-1" } %><br>
         </div>
 
-        <div class="actions">
-          <%= form.submit%>
-        </div><br>
+    <div class="actions text-center p-3">
+      <%= form.submit "Envoyer la demande", class: "btn btn-primary" %>
+    </div><br>
       <% end %>
   </div>
 </div>
