--- a/app/views/layouts/_back_link.html.erb
+++ b/app/views/layouts/_back_link.html.erb
@@ -1,1 +1,3 @@
-<%= link_to "Retour", 'javascript:history.back()', type: "button", class:"btn btn-secondary btn-sm" %>
+<div class="container">
+  <%= link_to "", 'javascript:history.back()', class:"fas fa-angle-left fa-2x mt-4 text-secondary" %>
+</div>
