--- a/app/views/users/apprentice_show.html.erb
+++ b/app/views/users/apprentice_show.html.erb
@@ -5,9 +5,15 @@
     <div class="col-6">
 
       <!-- TITLE -->
-      <div class="container">
-        <h3 class="">Mon espace apprenti</h3>
-        <%= link_to 'Modifier/suprimer mon profil', edit_user_registration_path(), method: :get, class: "badge badge-pill badge-primary" %>
+      <div class="container mb-4">
+        <div class="row">
+          <div class="col-7">
+            <h3 class="">Mon espace apprenti</h3>
+          </div>
+          <div class="col-5">
+            <%= link_to 'Modifier/suprimer mon profil', edit_user_registration_path(), method: :get, class: "badge badge-pill badge-primary" %>
+          </div>
+        </div>
       </div>
 
       <!-- PROFIL -->
