new and edit talent form, added category to talent show

--- a/app/views/talents/_show_talent.html.erb
+++ b/app/views/talents/_show_talent.html.erb
@@ -26,7 +26,10 @@
           </tr>
           <tr>
             <th scope="col">Catégorie:</th>
-            <td>à implanter</td>
+            <td><% @talent.categories.each do |category| %>
+                <%= category.title %><br>
+              <% end %>
+            </td>
           </tr>
           <tr>
             <th scope="col">Ville:</th>
