--- a/app/views/talents/_new_talent_form.html.erb
+++ b/app/views/talents/_new_talent_form.html.erb
@@ -19,19 +19,25 @@
       <div class="field">
         <%= form.label :description, 'Description' %>
         <%= form.text_area :description, class: "form-control", placeholder: "Décris ton talent. (1000 caractères maximum)." %>
+      </div><br>
+
+      <div class="row">
+        <div class="col">
+          <!-- Price -->
+          <div class="field">
+            <%= form.label :price, 'Prix en euros' %>
+            <%= form.number_field :price, min: 1, value: 10, class: "form-control" %>
+          </div>
+        </div>
+        <div class="col">
+          <!-- Duration -->
+          <div class="field">
+            <%= form.label :duration, 'Durée de la scéance en heure' %>
+            <%= form.select :duration, options_for_select((0.5..8).step(0.5).map{ |n| n % 1 == 0 ? n.to_i : n }, 1), { }, {class: "custom-select custom-select mb-3"} %>
+          </div>
+        </div>
       </div>
 
-      <!-- Price -->
-      <div class="field">
-        <%= form.label :price, 'Prix en euros' %>
-        <%= form.number_field :price, min: 1, value: 10, class: "form-control" %>
-      </div>
-
-      <!-- Duration -->
-      <div class="field">
-        <%= form.label :duration, 'Durée de la scéance en heure' %>
-        <%= form.select :duration, options_for_select((0.5..8).step(0.5).map{ |n| n % 1 == 0 ? n.to_i : n }, 1), { }, {class: "custom-select custom-select mb-3"} %>
-      </div>
       <hr>
       <!-- Place nested form -->
       <div class="field">
