--- a/app/views/talents/_edit_talent_form.html.erb
+++ b/app/views/talents/_edit_talent_form.html.erb
@@ -87,7 +87,7 @@
         <label>Photo</label>
         <br>
         <label class="btn btn-secondary ">
-            Modifier la photo
+            Choisir une photo
             <span style="display:none;">
               <%= form.file_field :picture %>
             </span>
