--- a/app/views/talents/_new_talent_form.html.erb
+++ b/app/views/talents/_new_talent_form.html.erb
@@ -80,7 +80,7 @@
         <label>Photo</label>
         <br>
         <label class="btn btn-secondary ">
-            Choisir une image
+            Choisir une photo
             <span style="display:none;">
               <%= form.file_field :picture %>
             </span>
