--- a/app/views/talents/_show_talent.html.erb
+++ b/app/views/talents/_show_talent.html.erb
@@ -39,6 +39,10 @@
             <th scope="col">Prix:</th>
             <td><%= @talent.price %> €</td>
           </tr>
+          <tr>
+            <th scope="col">Durée de la scéance:</th>
+            <td><%= @talent.duration %> h</td>
+          </tr>
         </tbody>
       </table>
     </div>
