--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -121,6 +121,29 @@ a:hover {
   box-shadow: 0 0 0 0.2rem rgba(54, 206, 168, 0.25);
 }
 
+.transparent-input:focus {
+  border-color: 0px;
+  border-radius: 25rem;
+  outline: 0;
+  box-shadow: 0 0 0 0 transparent;
+}
+
+.transparent-input {
+  width: 100%;
+  border-radius: 25rem;
+  height: calc(1.5em + 0.75rem + 2px);
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #495057;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 0px solid;
+  border-radius: 25rem;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
 .custom-select {
   border-color: #15D6A2;
   border-radius: 25rem;
@@ -666,6 +689,31 @@ button.stripe-button-el:focus>span {
 
 .card-img {
   border-radius: 1.8rem;
+}
+
+.card-search {
+  border-radius: 1.8rem;
+  border-style: solid;
+  border-width: 2px;
+  border-color: #15D6A2;
+}
+
+.left-border {
+  border-left-width: 0px;
+  border-bottom-width: 0px;
+  border-right-width: 1px;
+  border-top-width: 0px;
+  border-style: solid;
+  border-color: #15D6A2;
+}
+
+.input-custom {
+  font-size: large;
+}
+
+.input-custom: {
+  border-width: 0px;
+  font-size: large;
 }
 
 .navbar a {
