--- a/app/views/static_pages/kit_ui.html.erb
+++ b/app/views/static_pages/kit_ui.html.erb
@@ -368,6 +368,59 @@
         </div>
       </div>
     </form>
+
+    <div>
+      <%= form_tag search_results_path, method: 'get' do %>
+      <div class="form-group row max-width-50">
+        <label for="inputEmail3" class="col-sm-4 col-form-label-lg">Je souhaite découvrir :</label>
+        <div class="col-sm-7">
+          <%= text_field_tag :search_keywords, nil, class: "form-control form-control-lg", id: "search_keywords", placeholder: "Recherche un talent" %>
+        </div>
+        <div class="col-sm-1">
+          <%= button_tag(type: "submit", class: "btn btn-primary btn-lg mb-2 d-flex justify-content-center align-items-center") do %>
+            <i class="fas fa-search mr-1"></i>Rechercher
+          <% end %>
+        </div>
+      </div>
+      <% end %>
+    </div>
+
+
+    <p>Custom search bar , 3 input
+    
+    <div>
+      <%= form_tag search_results_path, method: 'get' do %>
+        <p>Je veux apprendre :</p>
+          <div class="row">
+            <div class="col ">
+              <div class="row card-search p-1">
+
+                <div class="col-3 left-border">
+                  <%= select_tag :search_keywords, nil , class: "transparent-input", id: "search_keywords", placeholder: "Catégorie" %>
+                </div>
+
+                <div class="col-6 left-border">
+                  <%= text_field_tag :search_keywords, nil, class: "transparent-input", id: "search_keywords", placeholder: "Recherche" %>
+                </div>
+
+                <div class="col-3">
+                  <div class="row">
+                  <%= text_field_tag :search_keywords, nil, class: "transparent-input", id: "search_keywords", placeholder: "Localisation" %>
+                  </div>
+                </div> 
+              </div>
+            </div>
+
+            <div class="col">
+              <div class="col-3 text-right p-0 m-0">
+                <%= button_tag(type: "submit", class: "btn btn-primary btn-lg") do %>
+                Recherche
+                <% end %>
+              </div>
+            </div>
+          </div>
+      <% end %>
+    </div>
     
     <br><br>
     <!-- FORMS -->
