Adding email of validation by mentor to apprentice plus fixes other emails

--- a/app/views/user_mailer/booking_user_confirmation.text.erb
+++ b/app/views/user_mailer/booking_user_confirmation.text.erb
@@ -1,5 +1,5 @@
-Confirmation de réservation de séance sur Talent Connect !
-=============================================================
+Confirmation de demande de réservation de séance sur Talent Connect !
+=====================================================================
 
 Salut <%= @appointment.apprentice.first_name %>,
 
