change home navbar and fix bug heroku from css file

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,3 @@
 <%= render partial: 'layouts/jumbo-landing' %>
+<%= render partial: 'layouts/search-three-part'%><br>
 <%= render partial: 'layouts/box-landing-card' %>
