--- a/app/views/layouts/_jumbo-landing.html.erb
+++ b/app/views/layouts/_jumbo-landing.html.erb
@@ -7,6 +7,6 @@
         <h4 class="max-width-45 text-center p-1 rounded text-white black-background">Trouve un mentor pour apprendre de nouvelles compétences en peer-learning, puis enseigne à ton tour ces compétences à un apprenti ! </h4>
     </div>
 </div>
-<div class="d-flex justify-content-center">
+<!--<div class="d-flex justify-content-center">
    <%= render partial: 'layouts/searchform-sentence' %>
-</div>
+</div>-->
