--- a/app/views/layouts/_search-three-part.html.erb
+++ b/app/views/layouts/_search-three-part.html.erb
@@ -1,16 +1,16 @@
-    <div>
+    <div class="text-center">
       <%= form_tag search_results_path, method: 'get' do %>
-        <p>Je veux apprendre :</p>
+        <h5 class="mb-3">Je veux apprendre :</h5>
         <!--parent div to align button with search bar-->
-        <div class="row">
+        <div class="row max-width-50 mx-auto">
 
           <!--first col left for search bar input-->
-          <div class="col ">
+          <div class="col-10 ">
             <div class="row card-search p-1">
 
               <!--nested transparent input 1/3-->
               <div class="col-3 left-border">
-                <%= select_tag :search_keywords, nil , class: "transparent-input", id: "search_keywords", placeholder: "Catégorie" %>
+                <%= select_tag :search_keywords, options_for_select(['Arts', 'Musique', 'DIY', 'Cuisine']), class: "transparent-input", id: "search_keywords", placeholder: "Catégorie" %>
               </div>
 
               <!--nested transparent input 2/3-->
@@ -20,15 +20,13 @@
 
               <!--nested transparent input 3/3-->
               <div class="col-3">
-                <div class="row">
                 <%= text_field_tag :search_keywords, nil, class: "transparent-input", id: "search_keywords", placeholder: "Localisation" %>
-                </div>
               </div> 
             </div>
           </div>
           
           <!--first col right for search bar button-->
-          <div class="col">
+          <div class="col-2">
             <div class="col-3 text-right p-0 m-0">
               <%= button_tag(type: "submit", class: "btn btn-primary btn-lg") do %>
               Recherche
