--- a/app/views/talents/search_results.html.erb
+++ b/app/views/talents/search_results.html.erb
@@ -1,4 +1,4 @@
 <!-- BACK LINK -->
 <%= render 'layouts/back_link' %> 
-
+<%= render 'layouts/searchform'%><br>
 <%= render 'layouts/box-search-result' %>
