--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -962,8 +962,14 @@ video {
   background-color: rgba(3, 3, 3, 0.2)
 }
 
+.scroll-div {
+  width: 800px;
+  height: 500px;
+  overflow-x: scroll;
+}
+
 #map {
   position: fixed;
-  height: 600px;
+  height: 500px;
   width: 70%;
 }
