hover on landing cards

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -763,6 +763,10 @@ textarea.form-control {
   border-radius: 0.8rem !important;
 }
 
+.landing-card:hover {
+  transform: scale(1.15);
+}
+
 .card-custom {
   position: relative;
   display: -ms-flexbox;
