changing img dimensions on card and jumbotron sentence

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -689,6 +689,10 @@ button.stripe-button-el:focus>span {
 
 .card-img {
   border-radius: 1.8rem;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+  object-fit: cover;
 }
 
 .card-search {
