access is resticted for review, user, appointment and talent, fixed some front for new review too

--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,19 +1,27 @@
-<%= form_with model: @review, url: talent_appointment_reviews_path, local: true, multipart: true do |form| %>
+<div class="container">
+  <div class=" card card-custom2 shadow max-width-45 p-4 m-auto">
+    <div class="p-2">
+      <h4 class="text-primary text-center"><u>Bienvenue sur la page d'évaluation d'une scéance :</u></h4>
 
-  <!-- Mark -->
-  <div class="field">
-    <%= form.label :mark, 'Note' %>
-    <%= form.select :mark, options_for_select(1..5) %>
-  </div>
+        <%= form_with model: @review, url: talent_appointment_reviews_path, local: true, multipart: true do |form| %>
 
-  <!-- Comment -->
-  <div class="field">
-    <%= form.label :comment, 'Commentaire' %>
-    <%= form.text_area :comment, class: "form-control", placeholder: "Commentaire (500 caractères maximum)." %>
-  </div>
+          <!-- Mark -->
+          <div class="field">
+            <%= form.label :mark, 'Note' %>
+            <%= form.select :mark, options_for_select(1..5), { }, {class: "custom-select custom-select mb-3"} %>
+          </div>
 
-  <div class="actions">
-    <%= form.submit %>
+          <!-- Comment -->
+          <div class="field">
+            <%= form.label :comment, 'Commentaire' %>
+            <%= form.text_area :comment, class: "form-control", placeholder: "Commentaire (500 caractères maximum)." %>
+          </div>
+
+           <div class="actions text-center p-3">
+            <%= form.submit "Confirmer ton évaluation", class: "btn btn-primary" %>
+          </div>
+          
+        <% end %>
+    </div>    
   </div>
-  
-<% end %>
+</div>
