fixing all style in html

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -100,7 +100,7 @@
               <br>
               <label class="btn btn-secondary ">
                   Choisir une photo
-                  <span style="display:none;">
+                  <span class="display-none">
                     <%= f.file_field :avatar %>
                   </span>
               </label>
