--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,14 +1,10 @@
-<footer class="text-muted mt-3">
-  <div class="container" style="position: absolute; left: 0; right: 0">
-    <hr>
+<hr>
+<footer class="text-muted container">
     <p class="float-right">
       <a href="#">
         <button type="button" class="btn btn-sm btn-outline-secondary">Retour haut de page</button>
       </a>
     </p>
-    <div class="container">
       &copy; TalentConnect, marque déposée. Ce site a été conçu et développé par :
-      <br>Diane DECOURT, Mehdi Lucas AMMAR, Patrice HUSZEZO, Rémi BARNAT, Yohan FLEURY
-    </div>
-  </div>
+      <br>Diane DECOURT | Mehdi Lucas AMMAR | Patrice HUSZEZO | Rémi BARNAT | Yohan FLEURY
 </footer>
