--- a/app/views/talents/_new_talent_form.html.erb
+++ b/app/views/talents/_new_talent_form.html.erb
@@ -90,7 +90,7 @@
         <br>
         <label class="btn btn-secondary ">
             Choisir une photo
-            <span style="display:none;">
+            <span class="display-none">
               <%= form.file_field :picture %>
             </span>
         </label>
