--- a/app/views/talents/_show_talent.html.erb
+++ b/app/views/talents/_show_talent.html.erb
@@ -55,6 +55,14 @@
   <div class="text-center">
     <%= link_to "Faire une demande de réservation", new_talent_appointment_path(@talent),  class: "btn btn-outline-danger mt-3 mb-4 mx-auto" %>
   </div>
+  <% if is_current_user_admin? %>
+  <div class="text-center">
+    <%= link_to "Modifier le talent", edit_admin_talent_path(id: @talent.id),  class: "btn btn-outline-danger mt-3 mb-4 mx-auto" %>
+  </div>
+  <div class="text-center">
+    <%= link_to "Supprimer", admin_talent_path(@talent), method: "delete", class: "btn btn-outline-danger mt-3 mb-4 mx-auto" %>
+  </div>
+  <% end %>
 </div>
 
 <div class="container">
