update de l'index admin

--- a/app/views/admin/talents/index.html.erb
+++ b/app/views/admin/talents/index.html.erb
@@ -1,1 +1,6 @@
-Coucou c'est le dashboard admin
+<h1> <center> Coucou c'est le dashboard admin </center> </h1>
+
+<h4> Actuellement il y a : </h4>
+<h4> <strong> <font color="green"> <%= @users.count%> </font> </strong> utilisateurs inscrits sur notre site !</h4>
+<h4>  <strong> <font color="green"> <%= @appointments.count%> </font></strong> RDV pris entre mentors et apprentis! </h4>
+<h4>  <strong> <font color="green"> <%= @talents.count%> </font></strong> talents proposés par des mentors! </h4>
