update index admin

--- a/app/views/admin/talents/index.html.erb
+++ b/app/views/admin/talents/index.html.erb
@@ -4,3 +4,4 @@
 <h4> <strong> <font color="green"> <%= @users.count%> </font> </strong> utilisateurs inscrits sur notre site !</h4>
 <h4>  <strong> <font color="green"> <%= @appointments.count%> </font></strong> RDV pris entre mentors et apprentis! </h4>
 <h4>  <strong> <font color="green"> <%= @talents.count%> </font></strong> talents proposés par des mentors! </h4>
+<h4>  <strong> <font color="green"> <%= @categories.count%> </font></strong> catégories différentes! </h4>
