modified back button

--- a/app/views/layouts/_back_link.html.erb
+++ b/app/views/layouts/_back_link.html.erb
@@ -1,3 +1,4 @@
-<div class="container">
-  <%= link_to "", 'javascript:history.back()', class:"fas fa-angle-left fa-2x mt-4 text-secondary" %>
+<div class="container d-flex align-items-center">
+  <%= link_to "", 'javascript:history.back()', class:"fas fa-angle-left fa-2x text-secondary mt-3" %>
+  <%= link_to "retour", 'javascript:history.back()', class:"text-secondary pt-3 pl-2 " %>  
 </div>
