--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,3 +1,5 @@
 <%= render partial: 'layouts/jumbo-landing' %>
 <%= render partial: 'layouts/search-three-part'%><br>
 <%= render partial: 'layouts/box-landing-card' %>
+<%= render partial: 'layouts/landing-mentor' %>
+<%= render partial: 'layouts/landing-testimonials'%>
