--- a/app/views/admin/talents/index.html.erb
+++ b/app/views/admin/talents/index.html.erb
@@ -5,3 +5,10 @@
 <h4>  <strong> <font color="green"> <%= @appointments.count%> </font></strong> RDV pris entre mentors et apprentis! </h4>
 <h4>  <strong> <font color="green"> <%= @talents.count%> </font></strong> talents proposés par des mentors! </h4>
 <h4>  <strong> <font color="green"> <%= @categories.count%> </font></strong> catégories différentes! </h4>
+<br>
+
+<h4> <u> Ici la liste des categories : </u></h4>
+<% @categories.each do |category| %>
+<h4> <%= category.title%>  <%= link_to "Supprimer", admin_category_path(id: category.id), method: "delete", remote: true, class: "btn btn-outline-danger mt-3 mb-4 mx-auto" %> </h4>
+<br>
+<% end%>
