--- a/app/views/layouts/_box-search-result.html.erb
+++ b/app/views/layouts/_box-search-result.html.erb
@@ -77,7 +77,7 @@
                 
                 talents.forEach((talent,index) => {
                   talent.addEventListener('mouseover', function(){
-                    this.style.boxShadow = "5px 10px 10px black";
+                    this.style.boxShadow = "5px 10px 10px #808080";
                     this.style.borderRadius = "25px";
                     changeMarkerOn(index);
                   })
