delete link on user on talent show

--- a/app/views/talents/_show_talent.html.erb
+++ b/app/views/talents/_show_talent.html.erb
@@ -1,7 +1,7 @@
 <div class="container mt-4">
   <div class="row">
     <h3 class=""><%= @talent.title %></h3>
-    <p class="ml-3 pt-2">proposé par: <a href="#"><%= @talent.user.first_name %></a></p>
+    <p class="ml-3 pt-2">proposé par : <div class="text-primary ml-2 pt-2"><%= @talent.user.first_name %></div></p>
   </div>
 
   <div class="row">
