adding carousel to jumbo

--- a/app/views/admin/talents/edit.html.erb
+++ b/app/views/admin/talents/edit.html.erb
@@ -91,7 +91,7 @@
         <br>
         <label class="btn btn-secondary ">
             Choisir une photo
-            <span style="display:none;">
+            <span class="display-none">
               <%= form.file_field :picture %>
             </span>
         </label>
