responsive search bar with media query 900px + adding container to box landing cards

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,10 @@
 <%= render partial: 'layouts/jumbo-landing' %>
-<%= render partial: 'layouts/search-three-part'%><br>
+<div class="fancy-navbar">
+  <%= render partial: 'layouts/search-three-part'%><br>
+</div>
+<div class="simple-navbar">
+  <%= render partial: 'layouts/searchform'%><br>
+</div>
 <%= render partial: 'layouts/box-landing-card' %>
 <%= render partial: 'layouts/landing-mentor' %>
 <%= render partial: 'layouts/landing-testimonials'%>
