--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -991,3 +991,17 @@ video {
 .display-none {
   display: none;
 }
+
+@media (min-width: 900px) {
+  .simple-navbar {
+    display: none;
+  }
+
+
+}
+
+@media (max-width: 900px) {
+  .fancy-navbar {
+    display: none;
+  }
+}
