--- a/app/views/layouts/_box-landing-card.html.erb
+++ b/app/views/layouts/_box-landing-card.html.erb
@@ -1,7 +1,8 @@
 <hr>
+<div class="container">
 <div class="text-center m-4">
   <h4 class="text-primary">Trouve une nouvelle passion...</h4><br>
-  <div class="row item-center">
+  <div class="row item-center ">
     <% @talents.sample(4).each do |talent|%>
       <%= render partial: 'layouts/landing-card', locals: {model: talent} %>
     <% end %>
