--- a/app/views/layouts/_search-three-part.html.erb
+++ b/app/views/layouts/_search-three-part.html.erb
@@ -1,26 +1,26 @@
     <div class="text-center">
-      <%= form_tag search_results_path, method: 'get' do %>
+      <%= form_with model: @talent, url: search_results_path, local: true, method: :get, multipart: true do |form| %>
         <h5 class="mb-3">Je veux apprendre :</h5>
         <!--parent div to align button with search bar-->
         <div class="row max-width-50 mx-auto">
 
           <!--first col left for search bar input-->
-          <div class="col-10 ">
+          <div class="col-10">
             <div class="row card-search p-1">
 
               <!--nested transparent input 1/3-->
               <div class="col-3 left-border">
-                <%= select_tag :search_keywords, options_for_select(['Arts', 'Musique', 'DIY', 'Cuisine']), class: "transparent-input", id: "search_keywords", placeholder: "Catégorie" %>
+                <%= form.collection_select(:category_id, get_categories, :id, :title, {:prompt => 'Catégorie'}, {class: "custom-select transparent-input"}) %>
               </div>
 
               <!--nested transparent input 2/3-->
               <div class="col-6 left-border">
-                <%= text_field_tag :search_keywords, nil, class: "transparent-input", id: "search_keywords", placeholder: "Recherche" %>
+                <%= form.text_field :search_keywords, class: "transparent-input", id: "search_keywords", placeholder: "Recherche" %>
               </div>
 
               <!--nested transparent input 3/3-->
               <div class="col-3">
-                <%= text_field_tag :search_keywords, nil, class: "transparent-input", id: "search_keywords", placeholder: "Localisation" %>
+                <%= form.select :city_name, options_for_select(get_cities_name), {:prompt => 'Ville'}, { class: "custom-select transparent-input"} %>
               </div> 
             </div>
           </div>
@@ -35,4 +35,5 @@
           </div>
         </div>
       <% end %>
+
     </div><br>
